Apply noctua's suggestions, expand and correct some sections

--- a/server/static/website/index.html
+++ b/server/static/website/index.html
@@ -9,15 +9,14 @@
   <meta name="author" content="Zeus WPI">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-25444917-14"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TB7GG2N9SE"></script>
   <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-    gtag('config', 'UA-25444917-14');
+      gtag('config', 'G-TB7GG2N9SE', { 'anonymize_ip': true });
   </script>
-
 
   <meta name="google-site-verification" content="IjAljmekXXbiQQh5zCQmyIKkvUsDx2EtJMZSwWO28-s"/>
 
