--- a/server/static/website/privacy-policy.html
+++ b/server/static/website/privacy-policy.html
@@ -26,23 +26,30 @@
             <li><a href="#assistent">Assistent</a></li>
         </ol>
     </li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="#automatisch">Worden er geautomatiseerde, individuele besluiten genomen?</a></li>
+    <li><a href="#contact">Hoe contacteert u ons en laat u uw rechten gelden?</a></li>
 </ol>
+
+<hr>
 
 <h2 id="wanneer">Wanneer geldt dit privacybeleid?</h2>
 
 <p>Het Hydra-project omhelst verschillende diensten en producten. Het privacybeleid is van toepassing op al deze diensten. Verschillende diensten hebben verschillende noden, waardoor er desgevallend een onderscheid dient gemaakt te worden tussen de diensten. Hieronder staat een overzicht van de diensten:</p>
 <ul>
     <li>De <strong>website</strong>, beschikbaar op <a href="https://hydra.ugent.be">hydra.ugent.be</a>. Dit omvat ook alle onderliggende pagina's, maar niet de API (zie hieronder).</li>
-    <li>De <strong>Hydra-API</strong>, beschikbaar op <a href="https://hydra.ugent.be">hydra.ugent.be/api/</a> en <a href="https://zeus.ugent.be/hydra/api/">zeus.ugent.be/hydra/api/</a>, alsook onderliggende pagina's.</li>
+    <li>De <strong>Hydra-API</strong>, beschikbaar op <a href="https://hydra.ugent.be/api/">hydra.ugent.be/api/</a> en <a href="https://zeus.ugent.be/hydra/api/">zeus.ugent.be/hydra/api/</a>, alsook onderliggende pagina's.</li>
     <li>De <strong>Android-app</strong>, beschikbaar via de <a href="https://play.google.com/store/apps/details?id=be.ugent.zeus.hydra">Play Store</a> of via de <a href="https://github.com/ZeusWPI/hydra-android/releases">repository</a>.</li>
     <li>De <strong>iOS-app</strong>, beschikbaar via de <a href="https://apps.apple.com/be/app/hydra/id602640924">App Store</a>.</li>
     <li><strong>UGent Hydra</strong>, een uitbreiding voor de Google Assistent.</li>
 </ul>
 
-<h3 id="wie">Wie heeft toegang tot de verzamelde data?</h3>
+<hr>
+
+<h2 id="wie">Wie heeft toegang tot de verzamelde data?</h2>
 
 <p>Het Hydra-project is een project van <a href="https://www.zeus.gent">Zeus WPI</a> in samenwerking met de <a href="http://student.ugent.be">Dienst Studentenactiviteiten</a> van de UGent. Zeus WPI beheert het project en de verzamelde data. In de eerste plaats hebben de ontwikkelaars en beheerders van het Hydra-project toegang tot de data. Daarnaast hebben de systeemadministrators van Zeus WPI toegang. In uitzonderlijk geval kunnen we geanonimiseerde data delen met de UGent, voornamelijk over het gebruik van de diensten.</p>
+
+<hr>
 
 <h2 id="data">Welke data worden verzameld en waarvoor?</h2>
 
@@ -67,22 +74,44 @@
 
 <p>Deze informatie wordt gebruikt om de toestand van de server in de gaten te houden, teneinde de dienstverlening van de server te garanderen. Zo kunnen we de belasting van de server in de gaten houden, misbruik detecteren en foute verzoeken (bv. missende webpagina's) verhelpen.</p>
 
-<p>Enkel de <a href="https://zeus.ugent.be/about/about/">systeemadministrators</a> van Zeus WPI en de medewerkers van het Hydra-project hebben toegang tot deze data. Deze data worden niet automatisch verwerkt; ze dienen om manueel de oorzaken van problemen te vinden.</p>
+<p>Enkel de <a href="https://zeus.ugent.be/about/about/">systeemadministrators</a> van Zeus WPI en de medewerkers van het Hydra-project hebben toegang tot deze data. Deze data worden niet automatisch verwerkt; ze dienen om manueel de oorzaken van problemen te vinden. Serverlogs worden onbeperkt bijgehouden.</p>
+
+<hr>
 
 <h3 id="api">Hydra-API</h3>
 
 <p>Als u de Hydra-API gebruikt, verzamelen we enkel <a href="#logs">serverlogs</a>.</p>
 
+<hr>
 
 <h3 id="website">Website</h3>
 
-<p>Bij het gebruik van de website worden volgende gegevens verzameld:</p>
+<p>Gegevensverzameling op de website geschiedt om twee redenen:</p>
 <ul>
-    <li><strong>Serverlogs.</strong> Zie <a href="#logs">hier</a> voor meer info.</li>
-    <li><strong>Bezoekersgegevens.</strong> Dit omvat paginaweergave's, hoe u op de website beland bent, hoe lang u er blijft, uit welk land u komt, welke browser u gebruikt, welk besturingssysteem u hebt, enz. Dit verzamelen we om een idee te krijgen van wie de website gebruikt. Meer informatie vindt u <a href="https://www.google.com/policies/privacy/partners/">hier</a>.</li>
+    <li><strong>Technische werking garanderen.</strong> Hiervoor verzamelen we serverlogs. Zie paragraaf <a href="#logs">Serverlogs</a> voor meer informatie.</li>
+    <li><strong>Analytics.</strong> We willen graag weten hoeveel de website gebruikt wordt, hoe gebruikers op de website komen (bv. via zoeken of via sociale media) en hoe lang ze er blijven. Hieronder staat meer informatie over wat we hiervoor verzamelen.</li>
 </ul>
 
-<p>Uw gegevens worden gedurende 14 maanden bewaard. Geen van deze data kunnen gebruikt worden om u te identificeren. Om de bezoekersgegevens te verzamelen maken we gebruik van cookies.</p>
+<p>Om de Analytics-gegevens te verzamelen, maken we gebruik van cookies. Concreet gebruiken we Google Analytics. Uitgebreide informatie over hoe Google met uw gegevens omgaat, vindt u <a href="https://www.google.com/policies/privacy/partners/">hier</a>. Verdere details over ons gebruik van Google Analytics:</p>
+
+<ul>
+    <li>Uw gegevens worden gedurende 14 maanden bewaard door Google Analytics. Enkel het bestuur van Zeus WPI en de medewerkers van het Hydra-project hebben toegang tot deze data.</li>
+    <li>Onder de Algemene Verordening Gegevensbescherming (AVG/GDPR) vervult Google de rol van gegevensverwerker. (Meer informatie over deze term vindt u <a href="https://ec.europa.eu/info/law/law-topic/data-protection/reform/rules-business-and-organisations/obligations/controller-processor/what-data-controller-or-data-processor_nl">hier</a>.) Uw gegevens worden niet gedeeld met derden.</li>
+    <li>Google verwerkt uw gegevens mogelijk buiten de EER. Google is gecertificeerd in het kader van het EU-VS-privacyschild.</li>
+    <li>Er wordt geen informatie verzameld waarmee we u kunnen identificeren (zoals IP-adressen).</li>
+    <li>Indien u niet wenst dat we uw gegevens verzamelen met Google Analytics, kan u o.a. deze <a href="https://tools.google.com/dlpage/gaoptout/?hl=nl">add-on</a> installeren.</li>
+</ul>
+
+Enkele voorbeelden van de verzamelde gegevens:
+<ul>
+    <li><strong>Softwareversies.</strong> Welke browser u gebruikt en zijn versie, welk besturingssysteem, enz.</li>
+    <li><strong>Gebruiksdata.</strong> Hoe u de website gebruik, wat u bezoekt, hoe lang u die onderdelen bezoekt, enz.</li>
+    <li><strong>Hardware-informatie.</strong> De resolutie van uw scherm.</li>
+</ul>
+
+<p class="example">Door deze informatie kunnen we ervoor zorgen dat de website goed werkt in de browsers die de bezoekers gebruiken. Als het merendeel van de gebruikers bv. een mobiel toestel gebruikt, kunnen we onze aandacht richten op het optimaliseren van de website voor mobiel gebruik.</p>
+
+<hr>
 
 <h3 id="apps">Apps</h3>
 
@@ -94,7 +123,7 @@
 
 <p>Verzamelde data omvat onder andere:</p>
 <ul>
-    <li><strong>Anonieme identificatienummers.</strong> Hiermee kunnen we meerdere evenementen en bezoeken aan dezelfde gebruiker koppelen, om zo patronen te herkennen. Hiermee kunnen we zien welke delen van de app vaak gebruikt worden en welke niet.</li>
+    <li><strong>Anonieme identificatienummers.</strong> Hiermee kunnen we meerdere evenementen en bezoeken aan dezelfde gebruiker koppelen, om zo patronen te herkennen. Hiermee kunnen we zien welke delen van de app vaak gebruikt worden en welke niet. Ook crashes op hetzelfde apparaat bij dezelfde gebruiker worden zo herkend.</li>
     <li><strong>Stacktraces.</strong> Dit teneinde de exacte oorsprong van crashes te kunnen vaststellen om zo snel mogelijk een oplossing te vinden.</li>
     <li><strong>Technische gegevens over uw apparaat.</strong> Dit omhelst de versie van uw besturingssysteem, welk apparaat, hoeveel RAM u hebt, enz.</li>
     <li><strong>Gebruiksdata.</strong> Dit zijn individuele evenementen, zoals "onderdeel X is geopend" of "een gebruiker bleef X minuten bij onderdeel Y".</li>
@@ -102,34 +131,67 @@
 
 <p class="example">Met de combinatie van deze gegevens kunnen we gebruikspatronen herkennen. Als vele gebruikers consequent naar het restomenu gaan, kunnen we dit opmerken en een snelkoppeling toevoegen. Als weinig gebruikers luisteren naar Urgent.fm, kunnen we overwegen deze functionaliteit niet meer aan te bieden.</p>
 
-<p>U kan zowel analytics als foutrapportage uitschakelen in de instellingen van de apps. Uw gegevens worden gedurende 14 maanden bewaard. Geen van deze data kunnen gebruikt worden om u te identificeren. Voor beide doeleinden gebruiken we producten van Google (Google Analytics, Firebase Analytics en Crashlytics). Meer informatie vindt u <a href="https://www.google.com/policies/privacy/partners/">hier</a>.</p>
+<p>Voor zowel Analytics als Foutrapportage gebruiken we producten van Google (Google Analytics, Firebase Analytics en Crashlytics). Meer informatie over hoe Google met uw gegevens omgaat, vindt u <a href="https://www.google.com/policies/privacy/partners/">hier</a>. Uitgebreide details over ons gebruik van deze Google-producten:</p>
+
+<ul>
+    <li>U kan zowel Analytics als Foutrapportage uitschakelen in de instellingen van de app. Analytics zijn opt-in; Foutrapportage is opt-out.</li>
+    <li>Analytics-gegevens worden gedurende 14 maanden bewaard door Google.<li>
+    <li>Stacktraces en bijhorende anonieme identificatienummers van crashes worden 90 dagen bewaard door Google.</li>
+    <li>Enkel het bestuur van Zeus WPI en de medewerkers van het Hydra-project hebben toegang tot deze data.</li>
+    <li>Onder de Algemene Verordening Gegevensbescherming (AVG/GDPR) vervult Google de rol van gegevensverwerker. (Meer informatie over deze term vindt u <a href="https://ec.europa.eu/info/law/law-topic/data-protection/reform/rules-business-and-organisations/obligations/controller-processor/what-data-controller-or-data-processor_nl">hier</a>.) Uw gegevens worden niet gedeeld met derden.</li>
+    <li>Google verwerkt uw gegevens mogelijk buiten de EER. Google is gecertificeerd in het kader van het EU-VS-privacyschild.</li>
+    <li>Er wordt geen informatie verzameld waarmee we u kunnen identificeren (zoals IP-adressen).</li>
+</ul>
 
 <h4>Overige diensten</h4>
 
-<p>Bepaalde functies in de app gebruiken diensten van derden of externe diensten, die hun eigen privacybeleid hebben:</p>
+<p>Als u een van deze functies gebruikt in de app, worden externe of andere diensten gebruikt. Zij kunnen hun eigen privacybeleid hebben:</p>
 <ul>
-    <li>Urgent.fm-speler, zie <a href="http://urgent.fm/wie-zijn-wij">hier</a>.</li>
-    <li>Activiteiten van verenigingen, zie <a href="http://student.ugent.be/contact/">hier</a>.</li>
-    <li>Als u de restolocaties op de kaart bekijkt, gebruiken we Google Maps. Indien u daar toestemming voor geeft, zal uw locatie gebruikt worden. Zelf verzamelen we deze gegevens niet. De door Google verzamelde data zijn onderhevig aan hun <a href="https://policies.google.com/privacy">privacybeleid</a>.</li>
-    <li>De apps maken gebruik van de <a href="#api">Hydra-API</a>.</li>
-    <li>Informatie over bibliotheken, zie <a href="https://lib.ugent.be/nl/info/disclaimer">hier</a>.</li>
+    <li><strong>Urgent.fm-speler.</strong> Contacteer <a href="http://urgent.fm/wie-zijn-wij">Urgent.fm</a> voor meer informatie.</li>
+    <li><strong>Activiteiten van verenigingen.</strong> Contacteer de <a href="http://student.ugent.be/contact/">Dienst Studentenactiviteiten</a> voor meer informatie.</li>
+    <li><strong>Restolocaties.</strong> Hiervoor gebruiken we Google Maps. Indien u daar toestemming voor geeft, zal uw locatie gebruikt worden. Zelf verzamelen we deze gegevens niet. De door Google verzamelde data zijn onderhevig aan hun <a href="https://policies.google.com/privacy">privacybeleid</a>.</li>
+    <li><strong>Restomenu</strong> en <strong>artikels</strong>. Hiervoor gebruiken we onze eigen Hydra-API. Meer informatie <a href="#api">hier</a>, maar kort gezegd verzamelen we serverlogs.</li>
+    <li><strong>Informatie over bibliotheken.</strong> Raadpleeg de <a href="https://lib.ugent.be/nl/info/disclaimer">disclaimer hier</a>.</li>
 </ul>
+
+<hr>
 
 <h3 id="assistent">Assistent</h3>
 
-<p>Bij het gebruik van "UGent Hydra" in de Google Assistent verzamelen we deze data en gebruiken we deze diensten:</p>
+<p>Bij het gebruik van "UGent Hydra" in de Google Assistent gebruiken we deze diensten:</p>
 
 <ul>
     <li><strong>Serverlogs.</strong> Zie <a href="#logs">hier</a> voor meer informatie.</li>
     <li><strong>Hydra-API</strong>, voor het ophalen van het menu. Zie <a href="#api">hier</a> voor meer informatie.</li>
-    <li><strong>Dialogflow</strong>, voor de gesprekmogelijkheden (d.w.z. verstaan wat u bedoelt). Zie <a href="https://policies.google.com/privacy">hier</a> voor meer informatie.</li>
+    <li><strong>Dialogflow</strong>, voor de gespreksmogelijkheden (d.w.z. verstaan wat u bedoelt). Deze data is onderhevig aan het privacybeleid van <a href="https://policies.google.com/privacy">Google</a>.</li>
 </ul>
 
-<p>Conversatiefragment (in tekstuele vorm) of andere informatie die ons toegestuurd wordt door de Google Assistent slaan we niet op. Op geen enkele manier kunnen we meeluisteren met gesprekken.</p>
+<p>Dialogflow verzamelt geen persoonlijke data. Om de herkenning van de gesprekken tussen u en UGent Hydra te verbeteren, slaat Dialogflow de inhoud van de gesprekken in tekstuele vorm op. Deze kunnen door het bestuur van Zeus WPI of de medewerkers van het Hydra-project beoordeeld worden, om zo de nauwkeurigheid van de herkenning te verbeteren.</p>
 
-<h2 id="contact">Contact</h2>
+<hr>
 
-<p>Voor vragen of opmerkingen kan u ons contacteren via <a href="mailto:hydra@zeus.ugent.be">hydra@zeus.ugent.be</a>.</p>
+<h2 id="automatisch">Worden er geautomatiseerde, individuele besluiten genomen?</h2>
+
+<p>In het Hydra-project worden geen beslissingen over u genomen die uitsluitend op geautomatiseerde wijze tot stand komen.</p>
+
+<hr>
+
+<h2 id="contact">Hoe contacteert u ons en laat u uw rechten gelden?</h2>
+
+<p>Om uw rechten te laten gelden, voor vragen of opmerkingen, kan u ons contacteren via <a href="mailto:hydra@zeus.ugent.be">hydra@zeus.ugent.be</a>.</p>
+
+<p>Hieronder sommen we kort uw rechten op:</p>
+
+<ul>
+    <li><strong>Recht op inzage.</strong> U mag weten of we gegevens we over u hebben, welke gegevens dat zijn en op welke manier en waarom we ze gebruiken. Ook heeft u het recht een overzicht te krijgen wie uw gegevens verwerkt.</li>
+    <li><strong>Recht op rectificatie en aanvulling.</strong> U heeft het recht in voorkomend geval foute gegevens te laten corrigeren, bv. door een rechtzetting of aanvulling te vragen.</li>
+    <li><strong>Recht op vergetelheid.</strong> U kan verzoeken dat we de gegevens die we over u hebben te wissen op grond van een aantal zaken.</li>
+    <li><strong>Recht op overdraagbaarheid.</strong> U hebt het recht om uw gegevens op te vragen en te ontvangen in een gestructureerd, door een machine leesbaar document.</li>
+    <li><strong>Recht op beperking van de verwerking.</strong> U heeft het recht om de verwerking van uw gegevens te beperken, bijvoorbeeld als er een juridische procedure loopt, een rechtzetting nog niet is doorgevoerd, of de gegevens onrechtmatig gebruikt worden.</li>
+    <li><strong>Recht van bezwaar.</strong> Indien u meent dat we uw gegevens verwerken op onrechtmatige basis, kan u bezwaar aantekenen.</li>
+</ul>
+
+<p>Merk op dat bovenstaande slechts een opsomming van de algemene rechten is. Zo zijn de meeste gegevens die we verzamelen van technische aard; rectificaties zijn niet relevant. Een ander voorbeeld is het recht op overdraagbaarheid: slechts zelden verzamelen we persoonlijke gegevens die hiervoor in aanmerking komen.</p>
 
 
 </body>
