Change Zeus address & use ascii quotes

--- a/server/static/website/privacy-policy.html
+++ b/server/static/website/privacy-policy.html
@@ -47,7 +47,7 @@
 
 <h2 id="wie">Wie heeft toegang tot de verzamelde data?</h2>
 
-<p>Het Hydra-project is een project van <a href="https://www.zeus.gent">Zeus <span class="acronym">WPI</span></a> in samenwerking met de <a href="http://student.ugent.be">Dienst Studentenactiviteiten</a> van de UGent. Zeus <span class="acronym">WPI</span> beheert het project en de verzamelde data. In de eerste plaats hebben de ontwikkelaars en beheerders van het Hydra-project toegang tot de data. Daarnaast hebben de systeemadministrators van Zeus <span class="acronym">WPI</span> toegang. In uitzonderlijk geval kunnen we geanonimiseerde data delen met de UGent, voornamelijk over het gebruik van de diensten.</p>
+<p>Het Hydra-project is een project van <a href="https://zeus.ugent.be">Zeus <span class="acronym">WPI</span></a> in samenwerking met de <a href="http://student.ugent.be">Dienst Studentenactiviteiten</a> van de UGent. Zeus <span class="acronym">WPI</span> beheert het project en de verzamelde data. In de eerste plaats hebben de ontwikkelaars en beheerders van het Hydra-project toegang tot de data. Daarnaast hebben de systeemadministrators van Zeus <span class="acronym">WPI</span> toegang. In uitzonderlijk geval kunnen we geanonimiseerde data delen met de UGent, voornamelijk over het gebruik van de diensten.</p>
 
 <hr>
 
@@ -140,7 +140,7 @@ Enkele voorbeelden van de verzamelde gegevens:
   <li><strong>Anonieme identificatienummers.</strong> Hiermee kunnen we meerdere evenementen en bezoeken aan dezelfde gebruiker koppelen, om zo patronen te herkennen. Hiermee kunnen we zien welke delen van de app vaak gebruikt worden en welke niet. Ook crashes op hetzelfde apparaat bij dezelfde gebruiker worden zo herkend.</li>
   <li><strong>Stacktraces.</strong> Dit teneinde de exacte oorsprong van crashes te kunnen vaststellen om zo snel mogelijk een oplossing te vinden.</li>
   <li><strong>Technische gegevens over uw apparaat.</strong> Dit omhelst de versie van uw besturingssysteem, welk apparaat, hoeveel <span class="acronym">RAM</span> u hebt, enz.</li>
-  <li><strong>Gebruiksdata.</strong> Dit zijn individuele evenementen, zoals „onderdeel X is geopend” of „een gebruiker bleef X minuten bij onderdeel Y”.</li>
+  <li><strong>Gebruiksdata.</strong> Dit zijn individuele evenementen, zoals "onderdeel X is geopend" of "een gebruiker bleef X minuten bij onderdeel Y".</li>
 </ul>
 
 <p class="example">Met de combinatie van deze gegevens kunnen we gebruikspatronen herkennen. Als vele gebruikers consequent naar het restomenu gaan, kunnen we dit opmerken en een snelkoppeling toevoegen. Als weinig gebruikers luisteren naar Urgent.fm, kunnen we overwegen deze functionaliteit niet meer aan te bieden.</p>
@@ -173,7 +173,7 @@ Enkele voorbeelden van de verzamelde gegevens:
 
 <h3 id="assistent">Assistent</h3>
 
-<p>Bij het gebruik van „Hydra van de UGent” in de Google Assistent gebruiken we deze diensten:</p>
+<p>Bij het gebruik van "Hydra van de UGent" in de Google Assistent gebruiken we deze diensten:</p>
 
 <ul>
   <li><strong>Serverlogs.</strong> Zie <a href="#logs">hier</a> voor meer informatie.</li>
