Update bicycle information

--- a/server/static/info/en/info-fietsen.html
+++ b/server/static/info/en/info-fietsen.html
@@ -69,7 +69,7 @@
     <li>Thursday: <span class="hours">4pm – 6pm</span></li>
     <li>Friday: <span class="hours">12pm – 3pm</span></li>
   </ul>
-  <p>Closed on holidays, during the Ghent Festivities and during the Christmas holidays.</p>
+  <p>Closed on holidays en between Christmas en New Years. Open during the Ghent Festivities from 9am to 4pm.</p>
 </div>
 
 <div>
@@ -86,8 +86,11 @@
   </p>
   <h4>Opening hours</h4>
   <ul>
-    <li>Monday through Friday: <span class="range">8am – 6pm</span></li>
-    <li>Week-ends and holidays (March&nbsp;3rd to October&nbsp;28th): <span class="range">10am – 6pm</span></li>
+    <li>Monday through Friday (March&nbsp;1st to October&nbsp;31st): <span class="range">8am – 6pm</span></li>
+    <li>Monday through Friday (November&nbsp;1st to February&nbsp;28th): <span class="range">10:30am – 6pm</span></li>
+    <li>Week-ends (March&nbsp;1st to October&nbsp;31st): <span class="range">10am – 6pm</span></li>
+    <li>Week-ends (November&nbsp;1st to February&nbsp;28th): <span class="range">closed</span></li>
+    <li>Holidays: <span class="range">10am – 6pm</span></li>
   </ul>
   <p>Closed during the Ghent Festivities.</p>
 </div>
@@ -131,6 +134,7 @@
   <p class="warning">Double check with the website, since the opening hours of this facility change during holidays.</p>
 </div>
 
+<!--
 <h2>Mobile repair bus</h2>
 <p>
   The mobile repair bus passes by several universities and colleges every week.<br>
@@ -160,6 +164,8 @@
 <p>
   <span class="range">11am – 4pm</span> — Hogent Campus Schoonmeersen (<a href="https://goo.gl/maps/1CZkZ5szx5m">map</a>)
 </p>
+
+-->
 
 <h2>Public bicycle pumps</h2>
 <ul>
