--- a/server/static/info/nl/info-fietsen.html
+++ b/server/static/info/nl/info-fietsen.html
@@ -69,7 +69,7 @@
     <li>donderdag: <span class="hours">16 – 18 u.</span></li>
     <li>vrijdag: <span class="hours">12 – 15 u.</span></li>
   </ul>
-  <p>Gesloten op feestdagen, tijdens de Gentse Feesten en in de kerstvakantie.</p>
+  <p>Gesloten op feestdagen en tussen Kerst en Nieuwjaar. Open tijdens de Gentse Feesten van 9 u. tot 16 u.</p>
 </div>
 
 <div>
@@ -86,8 +86,11 @@
   </p>
   <h4>Openingsuren</h4>
   <ul>
-    <li>Maandag tot vrijdag: <span class="range">8 – 18 u.</span></li>
-    <li>Weekends en feestdagen (3&nbsp;maart tot 28&nbsp;oktober): <span class="range">10 – 18 u.</span></li>
+    <li>Maandag tot vrijdag (1&nbsp;maart tot 31&nbsp;oktober): <span class="range">8 – 18 u.</span></li>
+    <li>Maandag tot vrijdag (1&nbsp;november tot 28&nbsp;februari): <span class="range">10:30 – 18 u.</span></li>
+    <li>Weekends (1&nbsp;maart tot 31&nbsp;oktober): <span class="range">10 – 18 u.</span></li>
+    <li>Weekends (1&nbsp;november tot 28&nbsp;februari): gesloten</li>
+    <li>Feestdagen: <span class="range">10 – 18 u.</span></li>
   </ul>
   <p>Gesloten tijdens de Gentse Feesten.</p>
 </div>
@@ -131,6 +134,7 @@
   <p class="warning">Kijk zeker op de website, want de openingsuren van dit fietspunt kunnen wijzigen tijdens vakanties en feestdagen.</p>
 </div>
 
+<!--
 <h2>Mobiele herstelbus</h2>
 <p>
   De mobiele herstelbus gaat wekelijks naar verschillende hogescholen en universiteiten.<br>
@@ -160,6 +164,8 @@
 <p>
   <span class="range">11 – 16 u.</span> — Hogent Campus Schoonmeersen (<a href="https://goo.gl/maps/1CZkZ5szx5m">kaart</a>)
 </p>
+
+-->
 
 <h2>Openbare fietspompen</h2>
 <ul>
