--- a/server/static/website/index.html
+++ b/server/static/website/index.html
@@ -52,7 +52,7 @@
       <div class="card content-card">
         <div class="card-body">
           <h1 class="d-none">Hydra</h1>
-          <div class="card-title"><img src="img/hydra-logo.png" class="mx-auto d-block" alt="logo"></div>
+          <div class="card-title"><img src="img/logo-hydra.svg" class="mx-auto d-block logo" alt="logo"></div>
           <p class="lead font-weight-normal">
             Met Hydra ben je steeds op de hoogte van het laatste nieuws en de activiteiten van jouw favoriete studentenverenigingen.
             Luister naar Urgent.fm, lees Schamper of beslis of het menu van de resto's vandaag bij je in de smaak valt.
@@ -62,16 +62,19 @@
           </p>
         </div>
         <div class="snakes-wrapper">
-          <img src="img/snake-headers.png" class="header mx-auto d-block snakes" alt="Beautiful Hydra snakes">
+          <img src="img/snakes.svg" class="header mx-auto d-block snakes" alt="Beautiful Hydra snakes">
         </div>
       </div>
       <div class="card badge-card">
         <div class="card-body">
           <a href="https://itunes.apple.com/be/app/hydra/id602640924?mt=8">
-            <img alt="Ontdek het op de App Store" src="https://zeus.ugent.be/assets/images/apple.svg">
+            <img alt="Ontdek het op de App Store" src="img/badge-app_store.svg">
           </a>
           <a href='https://play.google.com/store/apps/details?id=be.ugent.zeus.hydra'>
-            <img alt='Ontdek het op Google Play' src='https://zeus.ugent.be/assets/images/google.svg'/>
+            <img alt='Ontdek het op Google Play' src='img/badge-play_store.svg'/>
+          </a>
+          <a href='https://assistant.google.com/services/a/uid/000000b0810c1794?hl=nl'>
+            <img alt='Werkt met de Google Assistent' src='img/badge-assistant.png'/>
           </a>
         </div>
       </div>
@@ -90,7 +93,7 @@
             </div>
             <div class="col-12 col-md-6">
               <h4>Student Kick-Off</h4>
-              <p>Weet waar en wanneer de bands optreden, vind meer informatie over uw favoriete standje in de Student Village!</p>
+              <p>Weet waar en wanneer de bands optreden, vind meer informatie over je favoriete standje in de Student Village!</p>
               <h4>Restomenu</h4>
               <p>Verdwaald in Gent en plots wat hongerig? Dankzij de kaart weet je altijd waar de dichtstbijzijnde resto is en wat er op het menu staat.</p>
               <h4>Schamper</h4>
@@ -99,13 +102,13 @@
           </div>
           <h4>Open-source</h4>
           <p>Hydra wordt ontwikkeld door Zeus WPI, de werkgroep informatica van de UGent. Wij geloven in open-source en maken deze app dan ook publiek op
-            <a href="https://github.com/ZeusWPI/Hydra">GitHub</a>. Bijdrages zijn meer dan welkom!</p>
+            <a href="https://github.com/ZeusWPI/Hydra">GitHub</a>. Bijdragen zijn meer dan welkom!</p>
           <h4>Social media</h4>
           <p>Volg ons op <a href="https://facebook.com/hydra.ugent">Facebook</a>.</p>
           <br>
           <div class="row partner-row">
             <div class="col-6 col-md-6">
-              <img class="partner-logo mx-auto d-block" src="img/ugent.svg" alt="logo ugent">
+              <img class="partner-logo mx-auto d-block" src="img/logo-ugent.svg" alt="logo ugent">
             </div>
             <div class="col-6 col-md-6">
               <img class="partner-logo mx-auto d-block" src="https://zinc.zeus.gent/white" alt="logo zeus">
