Add attribution and use Dutch badges

--- a/server/static/website/index.html
+++ b/server/static/website/index.html
@@ -161,6 +161,12 @@
         Foto &copy; <a href="https://www.facebook.com/Baselphoto">Basel Photography</a>
       </div>
     </div>
+    <div class="row">
+      <div class="col-12 col-md-11 offset-md-1">
+        Google Play, het logo van Google Play, Google Assistant en het logo van Google Assistant zijn handelsmerken van Google LLC.<br>
+        Apple en het logo van de App Store zijn handelsmerken van Apple Inc.
+      </div>
+    </div>
   </div>
 </footer>
 <script>
