--- a/server/static/website/index.html
+++ b/server/static/website/index.html
@@ -7,6 +7,7 @@
   <meta name="google-play-app" content="app-id=be.ugent.zeus.hydra">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Zeus WPI">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TB7GG2N9SE"></script>
