--- a/server/static/website/privacy-policy.html
+++ b/server/static/website/privacy-policy.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Privacybeleid - Hydra</title>
   <link rel="stylesheet" href="css/text.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 
