Yearly information update

--- a/server/static/info/en/info-fietsen.html
+++ b/server/static/info/en/info-fietsen.html
@@ -29,23 +29,14 @@
   </p>
   <h4>Opening hours</h4>
   <ul>
-    <li>Monday: <span class="hours">9am – 12pm</span> and <span class="hours">1pm – 4pm</span></li>
-    <li>Tuesday: <span class="hours">12pm – 4pm</span></li>
-    <li>Wednesday: <span class="hours">8am – 12pm</span></li>
-    <li>Thursday: <span class="hours">10am – 12pm</span> and <span class="hours">1pm – 6:45pm</span> (repair shop <span class="hours">1pm – 4:45pm</span>)</li>
+    <li>Monday: <span class="hours">8:30am – 12:15pm</span> and <span class="hours">1pm – 4:15pm</span></li>
+    <li>Tuesday: <span class="hours">8:30am – 12:15pm</span> and <span class="hours">1pm – 4:15pm</span></li>
+    <li>Wednesday: <span class="hours">8:30am – 12:15pm</span></li>
+    <li>Thursday: <span class="hours">8:30am – 12:15pm</span> and <span class="hours">1pm – 5:45pm</span></li>
     <li>Friday: closed</li>
   </ul>
   <p>
-    The repair shop closes 15 minutes earlier than the rental shop sluit 15 minuten eerder dan de verhuur (except on Thursday afternoons, when it closes at <span class="hours">4:45pm</span>).
-  </p>
-</div>
-
-<div>
-  <h3>Repair shop UGent (Blandijnberg)</h3>
-  <p>Students and staff can go here for repairs.</p>
-  <p class="address">
-    Sint-Hubertusstraat&nbsp;2 (<a href="https://goo.gl/maps/q8m4kuWhAaQ2">map</a>)<br>
-    Tel: <a class="telephone" href="tel:092643670">09 264 36 70</a>
+    The repair shop closes 15 minutes earlier than the rental shop.
   </p>
 </div>
 
@@ -69,7 +60,7 @@
     <li>Thursday: <span class="hours">4pm – 6pm</span></li>
     <li>Friday: <span class="hours">12pm – 3pm</span></li>
   </ul>
-  <p>Closed on holidays en between Christmas en New Years. Open during the Ghent Festivities from 9am to 4pm.</p>
+  <p>Closed on holidays en between Christmas en New Years.</p>
 </div>
 
 <div>
@@ -86,13 +77,9 @@
   </p>
   <h4>Opening hours</h4>
   <ul>
-    <li>Monday through Friday (March&nbsp;1st to October&nbsp;31st): <span class="range">8am – 6pm</span></li>
-    <li>Monday through Friday (November&nbsp;1st to February&nbsp;28th): <span class="range">10:30am – 6pm</span></li>
-    <li>Week-ends (March&nbsp;1st to October&nbsp;31st): <span class="range">10am – 6pm</span></li>
-    <li>Week-ends (November&nbsp;1st to February&nbsp;28th): <span class="range">closed</span></li>
-    <li>Holidays: <span class="range">10am – 6pm</span></li>
+    <li>Monday through Friday: <span class="range">8am – 6pm</span></li>
+    <li>Week-ends and holidays: <span class="range">10am – 5:45pm</span></li>
   </ul>
-  <p>Closed during the Ghent Festivities.</p>
 </div>
 
 <div>
@@ -133,39 +120,6 @@
   </ul>
   <p class="warning">Double check with the website, since the opening hours of this facility change during holidays.</p>
 </div>
-
-<!--
-<h2>Mobile repair bus</h2>
-<p>
-  The mobile repair bus passes by several universities and colleges every week.<br>
-  Website: <a class="url" href="https://fietsambassade.gent.be/en/repair-and-maintenance/mobile-repair-bus">https://fietsambassade.gent.be/en/repair-and-maintenance/mobile-repair-bus</a>
-</p>
-<h3>Weekly planning</h3>
-<p>
-  <span class="warning">Check the website for the up-to-date detailed planning.</span><br>
-  This planning does not apply to holidays, Christmas holidays, Easter holidays, June, July, August and September.
-</p>
-
-<h4>Monday</h4>
-<p><span class="range">9am – 12pm</span> — UGent Campus Merelbeke (<a href="https://goo.gl/maps/UaaAKnaFCpT2">map</a>)</p>
-
-<h4>Tuesday</h4>
-<p>
-  <span class="range">08:15am – 10:15am</span> — K.U.L. / Luca School of Arts (<a href="https://goo.gl/maps/jLcC59fj5dr">map</a>)<br>
-  <span class="range">10:30am – 12:30pm</span> — Technology Campus Gent Odisee (<a href="https://goo.gl/maps/A2xGqnma7V82">map</a>)
-</p>
-
-<h4>Wednesday</h4>
-<p>
-  <span class="range">1:30pm – 12:45pm</span> — alternates weakly between UZ Gent-Campus building B3 (<a href="https://goo.gl/maps/YcQcKgHQ5Hu">map</a>) and GUSB (<a href="https://goo.gl/maps/8Vwn39ntPQn">map</a>)
-</p>
-
-<h4>Thursday</h4>
-<p>
-  <span class="range">11am – 4pm</span> — Hogent Campus Schoonmeersen (<a href="https://goo.gl/maps/1CZkZ5szx5m">map</a>)
-</p>
-
--->
 
 <h2>Public bicycle pumps</h2>
 <ul>
