--- a/server/static/info/nl/info-fietsen.html
+++ b/server/static/info/nl/info-fietsen.html
@@ -29,23 +29,14 @@
   </p>
   <h4>Openingsuren</h4>
   <ul>
-    <li>maandag: <span class="hours">9 – 12 u.</span> en <span class="hours">13 – 16 u.</span></li>
-    <li>dinsdag: <span class="hours">12 – 16 u.</span></li>
-    <li>woensdag: <span class="hours">8 – 12 u.</span></li>
-    <li>donderdag: <span class="hours">10 – 12 u.</span> en <span class="hours">13 – 18.45 u.</span> (herstelplaats <span class="hours">13 – 16.45 u.</span>)</li>
+    <li>maandag: <span class="hours">8.30 – 12.15 u.</span> en <span class="hours">13 – 16.15 u.</span></li>
+    <li>dinsdag: <span class="hours">8.30 – 12.15 u.</span> en <span class="hours">13 – 16.15 u.</span></li>
+    <li>woensdag: <span class="hours">8.30 – 12.15 u.</span></li>
+    <li>donderdag: <span class="hours">8.30 – 12.15 u.</span> en <span class="hours">13 – 17.45 u.</span></li>
     <li>vrijdag: gesloten</li>
   </ul>
   <p>
-    De herstelplaats sluit 15 minuten eerder dan de verhuur (behalve op donderdagnamiddag, dan sluit ze om <span class="hours">16.45 u.</span>).
-  </p>
-</div>
-
-<div>
-  <h3>Herstelplaats UGent (Blandijnberg)</h3>
-  <p>Studenten en personeel kunnen hier terecht voor herstellingen.</p>
-  <p class="address">
-    Sint-Hubertusstraat&nbsp;2 (<a href="https://goo.gl/maps/q8m4kuWhAaQ2">kaart</a>)<br>
-    Tel: <a class="telephone" href="tel:092643670">09 264 36 70</a>
+    De herstelplaats sluit 15 minuten eerder dan de verhuur.
   </p>
 </div>
 
@@ -69,7 +60,7 @@
     <li>donderdag: <span class="hours">16 – 18 u.</span></li>
     <li>vrijdag: <span class="hours">12 – 15 u.</span></li>
   </ul>
-  <p>Gesloten op feestdagen en tussen Kerst en Nieuwjaar. Open tijdens de Gentse Feesten van 9 u. tot 16 u.</p>
+  <p>Gesloten op feestdagen en tussen Kerst en Nieuwjaar.</p>
 </div>
 
 <div>
@@ -86,13 +77,9 @@
   </p>
   <h4>Openingsuren</h4>
   <ul>
-    <li>Maandag tot vrijdag (1&nbsp;maart tot 31&nbsp;oktober): <span class="range">8 – 18 u.</span></li>
-    <li>Maandag tot vrijdag (1&nbsp;november tot 28&nbsp;februari): <span class="range">10:30 – 18 u.</span></li>
-    <li>Weekends (1&nbsp;maart tot 31&nbsp;oktober): <span class="range">10 – 18 u.</span></li>
-    <li>Weekends (1&nbsp;november tot 28&nbsp;februari): gesloten</li>
-    <li>Feestdagen: <span class="range">10 – 18 u.</span></li>
+    <li>Maandag tot vrijdag: <span class="range">8 – 18 u.</span></li>
+    <li>Weekends en feestdagen: <span class="range">10 – 17.45 u.</span></li>
   </ul>
-  <p>Gesloten tijdens de Gentse Feesten.</p>
 </div>
 
 <div>
@@ -133,39 +120,6 @@
   </ul>
   <p class="warning">Kijk zeker op de website, want de openingsuren van dit fietspunt kunnen wijzigen tijdens vakanties en feestdagen.</p>
 </div>
-
-<!--
-<h2>Mobiele herstelbus</h2>
-<p>
-  De mobiele herstelbus gaat wekelijks naar verschillende hogescholen en universiteiten.<br>
-  Website: <a class="url" href="https://fietsambassade.gent.be/nl/herstel-en-onderhoud/mobiele-herstelbus">https://fietsambassade.gent.be/nl/herstel-en-onderhoud/mobiele-herstelbus</a>
-</p>
-<h3>Weekrooster</h3>
-<p>
-  <span class="warning">Kijk zeker op de website voor de bijgewerkte detailplanning.</span><br>
-  Dit rooster vervalt op feestdagen, kerstvakantie, paasvakantie, juni, juli, augustus en september.
-</p>
-
-<h4>Maandag</h4>
-<p><span class="range">9 – 12 u.</span> — UGent Campus Merelbeke (<a href="https://goo.gl/maps/UaaAKnaFCpT2">kaart</a>)</p>
-
-<h4>Dinsdag</h4>
-<p>
-  <span class="range">08.15 – 10.15 u.</span> — K.U.L. / Luca School of Arts (<a href="https://goo.gl/maps/jLcC59fj5dr">kaart</a>)<br>
-  <span class="range">10.30 – 12.30 u.</span> — Technologiecampus Gent Odisee (<a href="https://goo.gl/maps/A2xGqnma7V82">kaart</a>)
-</p>
-
-<h4>Woensdag</h4>
-<p>
-  <span class="range">13.30 – 14.45 u.</span> — wekelijks afwisselend tussen UZ Gent-Campus gebouw B3 (<a href="https://goo.gl/maps/YcQcKgHQ5Hu">kaart</a>) en GUSB (<a href="https://goo.gl/maps/8Vwn39ntPQn">kaart</a>)
-</p>
-
-<h4>Donderdag</h4>
-<p>
-  <span class="range">11 – 16 u.</span> — Hogent Campus Schoonmeersen (<a href="https://goo.gl/maps/1CZkZ5szx5m">kaart</a>)
-</p>
-
--->
 
 <h2>Openbare fietspompen</h2>
 <ul>
