--- a/server/static/website/index.html
+++ b/server/static/website/index.html
@@ -156,7 +156,7 @@
     <div class="row">
       <div class="col-12 col-md-5 offset-md-1 align-middle">
         Door <a href="http://zeus.ugent.be">Zeus WPI</a> en
-          <a href="http://student.ugent.be">Dienst StudentenActiviteiten</a>.
+          <a href="http://dsa.ugent.be">Dienst StudentenActiviteiten</a>.
       </div>
       <div class="col-12 col-md-5 text-right align-middle">
         Foto &copy; <a href="https://www.facebook.com/Baselphoto">Basel Photography</a>
