Add back site verification

--- a/server/static/website/index.html
+++ b/server/static/website/index.html
@@ -7,6 +7,7 @@
   <meta name="google-play-app" content="app-id=be.ugent.zeus.hydra">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Zeus WPI">
+  <meta name="google-site-verification" content="IjAljmekXXbiQQh5zCQmyIKkvUsDx2EtJMZSwWO28-s"/> 
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap-4.5.3.min.css">
 
