Add github badge

--- a/server/static/website/index.html
+++ b/server/static/website/index.html
@@ -46,6 +46,9 @@
           <a href='https://play.google.com/store/apps/details?id=be.ugent.zeus.hydra'>
             <img alt='Ontdek het op Google Play' src='img/badge-play_store.svg'/>
           </a>
+          <a href="https://github.com/Zeus/hydra">
+            <img alt="Ontdek het op github" src="img/badge-github.svg">
+          </a>
         </div>
       </div>
       <div class="card content-card">
