--- a/server/static/website/en/index.html
+++ b/server/static/website/en/index.html
@@ -26,16 +26,16 @@
         <div class="card-body">
           <h1 class="d-none">Hydra</h1>
           <div class="card-title">
-            <a href="/"> <img src="/img/flag_nl.svg" style="float: left; max-heigth: 25px; max-width: 25px" alt="Nederlandse site vlag"></a>
-            <a href="/en"> <img src="/img/flag_uk.svg" style="float: right; max-heigth: 25px; max-width: 25px" alt="English site flag"></a>
+            <a href="/en"> <img src="/img/flag_uk.svg" style="float: left; max-heigth: 25px; max-width: 25px" alt="English site flag"></a>
+            <a href="/"> <img src="/img/flag_nl.svg" style="float: right; max-heigth: 25px; max-width: 25px" alt="Nederlandse site vlag"></a>
               <img src="/img/logo-hydra.svg" class="mx-auto d-block logo" alt="logo">
           </div>
           <p class="lead font-weight-normal">
-            Met Hydra ben je steeds op de hoogte van het laatste nieuws en de activiteiten van jouw favoriete studentenverenigingen.
-            Luister naar <a href="https://urgent.fm">Urgent.fm</a>, lees <a href="https://schamper.be">Schamper</a> of beslis of het menu van de resto's vandaag bij je in de smaak valt.
+          With Hydra you're always up to date with the latest news and activities of your favorite clubs.
+          Listen to <a href="https://urgent.fm">Urgent.fm</a>, read <a href="https://schamper.be"> schamper </a> or decide whether today's menu in the restaurant is to your liking.
           </p>
           <p class="lead font-weight-normal">
-            Waar je ook bent, vanaf nu heb je met Hydra steeds de UGent in je broekzak.
+            Wherever you are, with Hydra you always have Ghent University with you!
           </p>
         </div>
         <div class="snakes-wrapper">
@@ -45,13 +45,13 @@
       <div class="card badge-card">
         <div class="card-body">
           <a href="https://itunes.apple.com/be/app/hydra/id602640924?mt=8">
-            <img alt="Ontdek het op de App Store" src="/img/badge-app_store.svg">
+            <img alt="Discover Hydra on the App Store" src="/img/badge-app_store.svg">
           </a>
           <a href='https://play.google.com/store/apps/details?id=be.ugent.zeus.hydra'>
-            <img alt='Ontdek het op Google Play' src='/img/badge-play_store.svg'/>
+            <img alt='Discover Hydra on Google Play' src='/img/badge-play_store.svg'/>
           </a>
           <a href="https://github.com/Zeus/hydra">
-            <img alt="Ontdek het op github" src="/img/badge-github.svg">
+            <img alt="Discover Hydra on github" src="/img/badge-github.svg">
           </a>
         </div>
       </div>
@@ -59,29 +59,36 @@
         <div class="card-body">
           <div class="row clearfix">
             <div class="col-12 col-md-6">
-              <h4>Activiteiten</h4>
-              <p>Niets te doen vanavond? Op onze kalender vind je vast wel iets naar je goesting. Ook weet je dankzij Facebook direct op welke activiteiten je vrienden aanwezig zullen zijn.</p>
-              <h4>Nieuws</h4>
-              <p>Weet wat er gebeurt in en om de UGent en jouw studentenvereniging.</p>
+              <h4>Activities</h4>
+              <p>Have you got nothing to do tonight? In our calendar you will surely find something to your liking.</p>
+
+              <h4>News</h4>
+              <p>Get updates about what happens at Ghent University and your favorite clubs.</p>
+
               <h4>Info</h4>
-              <p>Niet zeker op welke dagen de universiteit gesloten is of waar je je fiets kan herstellen? Hier vind je het antwoord op al je vragen.</p>
+              <p>Not sure when the University is closes or wondering where you can fix your bike? All those questions and many more are answered in this section.</p>
+
               <h4>Urgent.fm</h4>
-              <p>Live-streaming radio van Urgent.fm: je favoriete radio altijd bij de hand.</p>
+              <p>Live-streaming of Urgent.fm: your favorite radio, always with you.</p>
+
               <h4>Social media</h4>
-              <p>Volg ons op <a href="https://facebook.com/hydra.ugent">Facebook</a>.</p>
+              <p>Follow us on <a href="https://facebook.com/hydra.ugent">Facebook</a>.</p>
             </div>
             <div class="col-12 col-md-6">
               <h4>Student Kick-Off</h4>
-              <p>Weet waar en wanneer de bands optreden, vind meer informatie over je favoriete standje in de Student Village!</p>
-              <h4>Restomenu</h4>
-              <p>Verdwaald in Gent en plots wat hongerig? Dankzij de kaart weet je altijd waar de dichtstbijzijnde resto is en wat er op het menu staat.</p>
+              <p>See where and when the bands play, more information about your favorite stand in the Student Village!</p>
+
+              <h4>Student Restaurant menu</h4>
+              <p>Lost in Ghent and suddenly hungry? Thanks to our map you know where the nearest student restaurant is and what's on the menu.</p>
+
               <h4>Schamper</h4>
-              <p>Blijf op de hoogte van het laatste nieuws met het officiële en onafhankelijke studentenblad van de Universiteit Gent.</p>
-              <h4>Open-source</h4>
-              <p>Hydra wordt ontwikkeld door Zeus WPI, de werkgroep informatica van de UGent. Wij geloven in open-source en maken deze app dan ook publiek op
+              <p>Stay up to date about the latest news with the official and independent student paper from Ghent University.</p>
+              <h4>Open source</h4>
+              <p>Hydra is developed by <a href="https://zeus.gent">Zeus WPI</a>, student association Computer Science at Ghent University. We believe in open source and thus make this app open.
             <a href="https://github.com/ZeusWPI/Hydra">GitHub</a>. Bijdragen zijn meer dan welkom!</p>
             </div>
           </div>
+
           <br>
           <div class="row partner-row">
             <div class="col-4 col-md-4">
@@ -134,18 +141,18 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12 col-md-5 offset-md-1 align-middle">
-        Door <a href="http://zeus.ugent.be">Zeus WPI</a> en
+        By <a href="http://zeus.ugent.be">Zeus WPI</a> and
           <a href="http://dsa.ugent.be">Dienst StudentenActiviteiten</a>.
       </div>
       <div class="col-12 col-md-5 text-right align-middle">
-        Foto &copy; <a href="https://www.facebook.com/Baselphoto">Basel Photography</a>
+        Photo &copy; <a href="https://www.facebook.com/Baselphoto">Basel Photography</a>
       </div>
     </div>
     <div class="row">
       <div class="col-12 col-md-11 offset-md-1">
-        Google Play, het logo van Google Play, Google Assistant en het logo van Google Assistant zijn handelsmerken van Google LLC.<br>
-        Apple en het logo van de App Store zijn handelsmerken van Apple Inc. <br>
-        GitHub en het logo van GitHub zijn handelsmerken van GitHub Inc.
+        Google Play, the Google Play logo, Google Assistant and the Google Assistant logo are trademarks owned by Google LLC.<br>
+        Apple and the App Storeare logo trademarks owned by Apple Inc. <br>
+        GitHub and the GitHub logo are trademarks owned by GitHub Inc.
       </div>
     </div>
   </div>
