--- a/server/static/website/index.html
+++ b/server/static/website/index.html
@@ -1,9 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <title>Hydra</title>
 </head>
 <body>
+    <script>
+        window.location.href = navigator.language.split('-')[0] === "en" ? "/en" : "/nl"
+    </script>
 </body>
-<script>
-    window.location.href = navigator.language.split('-')[0] === "en" ? "/en" : "/nl"
-</script>
 </html>
