--- a/server/static/website/en/index.html
+++ b/server/static/website/en/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hydra, mobiele app voor studenten aan de UGent</title>
+  <title>Hydra, the mobile app for Ghent University students</title>
   <meta name="apple-itunes-app" content="app-id=602640924">
   <meta name="google-play-app" content="app-id=be.ugent.zeus.hydra">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,8 +26,7 @@
         <div class="card-body">
           <h1 class="d-none">Hydra</h1>
           <div class="card-title">
-            <a href="/en"> <img src="/img/flag_uk.svg" style="float: left; max-heigth: 25px; max-width: 25px" alt="English site flag"></a>
-            <a href="/"> <img src="/img/flag_nl.svg" style="float: right; max-heigth: 25px; max-width: 25px" alt="Nederlandse site vlag"></a>
+            <a href="/"> <img src="/img/flag_nl.svg" style="float: right; max-height: 25px; max-width: 25px" alt="Nederlandse site vlag"></a>
               <img src="/img/logo-hydra.svg" class="mx-auto d-block logo" alt="logo">
           </div>
           <p class="lead font-weight-normal">
