fix: language based redirect

--- a/server/static/website/en/index.html
+++ b/server/static/website/en/index.html
@@ -26,7 +26,7 @@
         <div class="card-body">
           <h1 class="d-none">Hydra</h1>
           <div class="card-title">
-            <a href="/"> <img src="/img/flag_nl.svg" style="float: right; max-height: 25px; max-width: 25px" alt="Nederlandse site vlag"></a>
+            <a href="/nl"> <img src="/img/flag_nl.svg" style="float: right; max-height: 25px; max-width: 25px" alt="Nederlandse site vlag"></a>
               <img src="/img/logo-hydra.svg" class="mx-auto d-block logo" alt="logo">
           </div>
           <p class="lead font-weight-normal">
