--- a/server/static/website/index.html
+++ b/server/static/website/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <script>
-        window.location.href = navigator.language.split('-')[0] === "en" ? "/en" : "/nl"
+        window.location.href = navigator.language.split('-')[0] === "nl" ? "/nl" : "/en"
     </script>
 </body>
 </html>
