add even more screenshots

--- a/server/static/website/en/index.html
+++ b/server/static/website/en/index.html
@@ -128,7 +128,7 @@
             <img class="d-block w-100" src="/img/en/Urgent.png" alt="screenshot urgent">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/img/Schamper.png" alt="screenshot schamper">
+            <img class="d-block w-100" src="/img/en/Schamper.png" alt="screenshot schamper">
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="/img/en/Info.png" alt="screenshot info">
