--- a/server/static/website/nl/index.html
+++ b/server/static/website/nl/index.html
@@ -100,25 +100,31 @@
       <div id="screenshot-carousel" class="carousel slide mx-auto" data-ride="carousel" data-interval="4000">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="/img/android-1.png" alt="screenshot 1">
+            <img class="d-block w-100" src="/img/nl/Overzicht.png" alt="screenshot overview">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/img/android-2.png" alt="screenshot 2">
+            <img class="d-block w-100" src="/img/nl/Evenementen.png" alt="screenshot events">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/img/android-3.png" alt="screenshot 3">
+            <img class="d-block w-100" src="/img/nl/Nieuws.png" alt="screenshot news">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/img/android-5.png" alt="screenshot 5">
+            <img class="d-block w-100" src="/img/nl/Resto.png" alt="screenshot resto">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/img/android-6.png" alt="screenshot 6">
+            <img class="d-block w-100" src="/img/nl/Bib-overview.png" alt="screenshot bib">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/img/android-7.png" alt="screenshot 7">
+            <img class="d-block w-100" src="/img/nl/Bib-detail.png" alt="screenshot bib 2">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/img/android-8.png" alt="screenshot 8">
+            <img class="d-block w-100" src="/img/nl/Urgent.png" alt="screenshot urgent">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="/img/nl/Schamper.png" alt="screenshot schamper">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="/img/nl/Info.png" alt="screenshot info">
           </div>
         </div>
       </div>
