add english ugent logo + move dutch ugent logo to subdirectory

--- a/server/static/website/nl/index.html
+++ b/server/static/website/nl/index.html
@@ -84,7 +84,7 @@
           <br>
           <div class="row partner-row">
             <div class="col-4 col-md-4">
-              <img class="partner-logo mx-auto d-block" src="/img/logo-ugent.svg" alt="logo ugent">
+              <img class="partner-logo mx-auto d-block" src="/img/nl/logo-ugent.svg" alt="logo ugent">
             </div>
             <div class="col-4 col-md-4">
               <img class="partner-logo mx-auto d-block" src="https://zinc.zeus.gent/white" alt="logo zeus">
