--- a/server/static/website/index.html
+++ b/server/static/website/index.html
@@ -1,11 +1,145 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
-    <title>Hydra</title>
+  <meta charset="UTF-8">
+  <title>Hydra, mobiele app voor studenten aan de UGent</title>
+  <meta name="apple-itunes-app" content="app-id=602640924">
+  <meta name="google-play-app" content="app-id=be.ugent.zeus.hydra">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Zeus WPI">
+  <meta name="google-site-verification" content="IjAljmekXXbiQQh5zCQmyIKkvUsDx2EtJMZSwWO28-s"/> 
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="css/bootstrap-4.5.3.min.css">
+
+  <link rel="stylesheet" href="css/custom.css">
+
+  <script src="js/jquery-3.5.1.slim.min.js"></script>
+
+  <script src="js/bootstrap-4.5.3.bundle.min.js"></script>
+
 </head>
 <body>
-    <script>
-        window.location.href = navigator.language.split('-')[0] === "nl" ? "/nl" : "/en"
-    </script>
+<main class="container-fluid">
+  <div class="row top-row">
+    <div class="col-12 col-md-5 offset-md-1">
+      <div class="card content-card">
+        <div class="card-body">
+          <h1 class="d-none">Hydra</h1>
+          <div class="card-title"><img src="img/logo-hydra.svg" class="mx-auto d-block logo" alt="logo"></div>
+          <p class="lead font-weight-normal">
+            Met Hydra ben je steeds op de hoogte van het laatste nieuws en de activiteiten van jouw favoriete studentenverenigingen.
+            Luister naar Urgent.fm, lees Schamper of beslis of het menu van de resto's vandaag bij je in de smaak valt.
+          </p>
+          <p class="lead font-weight-normal">
+            Waar je ook bent, vanaf nu heb je met Hydra steeds de UGent in je broekzak.
+          </p>
+        </div>
+        <div class="snakes-wrapper">
+          <img src="img/snakes.svg" class="header mx-auto d-block snakes" alt="Beautiful Hydra snakes">
+        </div>
+      </div>
+      <div class="card badge-card">
+        <div class="card-body">
+          <a href="https://itunes.apple.com/be/app/hydra/id602640924?mt=8">
+            <img alt="Ontdek het op de App Store" src="img/badge-app_store.svg">
+          </a>
+          <a href='https://play.google.com/store/apps/details?id=be.ugent.zeus.hydra'>
+            <img alt='Ontdek het op Google Play' src='img/badge-play_store.svg'/>
+          </a>
+        </div>
+      </div>
+      <div class="card content-card">
+        <div class="card-body">
+          <div class="row clearfix">
+            <div class="col-12 col-md-6">
+              <h4>Activiteiten</h4>
+              <p>Niets te doen vanavond? Op onze kalender vind je vast wel iets naar je goesting. Ook weet je dankzij Facebook direct op welke activiteiten je vrienden aanwezig zullen zijn.</p>
+              <h4>Nieuws</h4>
+              <p>Weet wat er gebeurt in en om de UGent en jouw studentenvereniging.</p>
+              <h4>Info</h4>
+              <p>Niet zeker op welke dagen de universiteit gesloten is of waar je je fiets kan herstellen? Hier vind je het antwoord op al je vragen.</p>
+              <h4>Urgent.fm</h4>
+              <p>Live-streaming radio van Urgent.fm: je favoriete radio altijd bij de hand.</p>
+            </div>
+            <div class="col-12 col-md-6">
+              <h4>Student Kick-Off</h4>
+              <p>Weet waar en wanneer de bands optreden, vind meer informatie over je favoriete standje in de Student Village!</p>
+              <h4>Restomenu</h4>
+              <p>Verdwaald in Gent en plots wat hongerig? Dankzij de kaart weet je altijd waar de dichtstbijzijnde resto is en wat er op het menu staat.</p>
+              <h4>Schamper</h4>
+              <p>Blijf op de hoogte van het laatste nieuws met het officiële en onafhankelijke studentenblad van de Universiteit Gent.</p>
+            </div>
+          </div>
+          <h4>Open-source</h4>
+          <p>Hydra wordt ontwikkeld door Zeus WPI, de werkgroep informatica van de UGent. Wij geloven in open-source en maken deze app dan ook publiek op
+            <a href="https://github.com/ZeusWPI/Hydra">GitHub</a>. Bijdragen zijn meer dan welkom!</p>
+          <h4>Social media</h4>
+          <p>Volg ons op <a href="https://facebook.com/hydra.ugent">Facebook</a>.</p>
+          <br>
+          <div class="row partner-row">
+            <div class="col-6 col-md-6">
+              <img class="partner-logo mx-auto d-block" src="img/logo-ugent.svg" alt="logo ugent">
+            </div>
+            <div class="col-6 col-md-6">
+              <img class="partner-logo mx-auto d-block" src="https://zinc.zeus.gent/white" alt="logo zeus">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-6">
+      <div id="screenshot-carousel" class="carousel slide mx-auto" data-ride="carousel" data-interval="4000">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="img/android-1.png" alt="screenshot 1">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/android-2.png" alt="screenshot 2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/android-3.png" alt="screenshot 3">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/android-5.png" alt="screenshot 5">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/android-6.png" alt="screenshot 6">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/android-7.png" alt="screenshot 7">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/android-8.png" alt="screenshot 8">
+          </div>
+        </div>
+      </div>
+      <div>
+
+      </div>
+    </div>
+  </div>
+
+</main>
+<footer class="footer">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 col-md-5 offset-md-1 align-middle">
+        Door <a href="http://zeus.ugent.be">Zeus WPI</a> en
+          <a href="http://dsa.ugent.be">Dienst StudentenActiviteiten</a>.
+      </div>
+      <div class="col-12 col-md-5 text-right align-middle">
+        Foto &copy; <a href="https://www.facebook.com/Baselphoto">Basel Photography</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 col-md-11 offset-md-1">
+        Google Play, het logo van Google Play, Google Assistant en het logo van Google Assistant zijn handelsmerken van Google LLC.<br>
+        Apple en het logo van de App Store zijn handelsmerken van Apple Inc.
+      </div>
+    </div>
+  </div>
+</footer>
+<div id="footer-push"></div>
+
 </body>
 </html>
