--- a/server/static/website/en/index.html
+++ b/server/static/website/en/index.html
@@ -49,7 +49,7 @@
           <a href='https://play.google.com/store/apps/details?id=be.ugent.zeus.hydra'>
             <img alt='Discover Hydra on Google Play' src='/img/badge-play_store.svg'/>
           </a>
-          <a href="https://github.com/Zeus/hydra">
+          <a href="https://github.com/ZeusWPI/hydra">
             <img alt="Discover Hydra on github" src="/img/badge-github.svg">
           </a>
         </div>
